--- a/EntGuild/Views/Products/Index.cshtml
+++ b/EntGuild/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EntGuild.Models.Product>
+﻿@model EntGuild.Models.ProductGenreViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -9,41 +9,53 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-controller="Products" asp-action="Index" method="get">
+    <p>
+        <select asp-for="ProductGenre" asp-items="Model.Genres">
+            <option value="">All</option>
+        </select>
+        Title: <input type="text" name="SearchString" />
+        <input type="submit" value="Search" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Products![0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Author)
+                @Html.DisplayNameFor(model => model.Products![0].Author)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.Products![0].Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Genre)
+                @Html.DisplayNameFor(model => model.Products![0].Genre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.subGenre)
+                @Html.DisplayNameFor(model => model.Products![0].subGenre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Published)
+                @Html.DisplayNameFor(model => model.Products![0].Published)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastUpdatedBy)
+                @Html.DisplayNameFor(model => model.Products![0].LastUpdatedBy)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastUpdated)
+                @Html.DisplayNameFor(model => model.Products![0].LastUpdated)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Products!) {
         <tr>
             <td>
+                <a asp-action="Details" asp-route-id="@item.Id">
                 @Html.DisplayFor(modelItem => item.Name)
+                </a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Author)
