--- a/EntGuild/Views/Shared/_Layout.cshtml
+++ b/EntGuild/Views/Shared/_Layout.cshtml
@@ -28,12 +28,33 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="">Products</a>
                         </li>
+                        <!-- Not logged in: Start -->
                         <li class="nav-item" style="text-align: right">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="">Login</a>
                         </li>
                         <li class="nav-item" style="text-align: right">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Register" asp-action="">Register</a>
                         </li>
+                        <!-- Not logged in: End -->
+                        <!-- Logged in: Start -->
+                        <li class="nav-item" style="text-align: right">
+                            <div class="btn-group">
+                            <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                Account
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Orders</a></li>
+                                <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <!-- Admin: Start -->
+                                <li><a class="dropdown-item" href="#">Admin</a></li>
+                                <!-- Admin: End -->
+                                <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <li><hr class="dropdown-divider" /></li>
+                                <li><a class="dropdown-item" href="#">Log Out</a></li>
+                            </ul>
+                            </div>
+                        </li>
+                        <!-- Logged in: End -->
                     </ul>
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex">
