--- a/EntGuild/Views/Shared/_Layout.cshtml
+++ b/EntGuild/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#">Orders</a></li>
                                 <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <!-- Employee: Start -->
+                                <li><a class="dropdown-item" href="#">Staff</a></li>
+                                <!-- Employee: End -->
                                 <!-- Admin: Start -->
                                 <li><a class="dropdown-item" href="#">Admin</a></li>
                                 <!-- Admin: End -->
