--- a/EntGuild/Views/Products/Details.cshtml
+++ b/EntGuild/Views/Products/Details.cshtml
@@ -60,7 +60,9 @@
         </dd>
     </dl>
 </div>
+<!-- Admin Only: Start -->
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+<!-- Admin Only: End -->
