--- a/EntGuild/Views/Products/Index.cshtml
+++ b/EntGuild/Views/Products/Index.cshtml
@@ -78,11 +78,13 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastUpdated)
             </td>
+            <!-- Admin Only: Start -->
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
+            <!-- Admin Only: End -->
         </tr>
 }
     </tbody>
