--- a/EntGuild/Views/Home/Privacy.cshtml
+++ b/EntGuild/Views/Home/Privacy.cshtml
@@ -4,3 +4,4 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+<p> Heyy matt 7 how awas work milkes morales lies of p</p>
