--- a/EntGuild/Views/Products/Details.cshtml
+++ b/EntGuild/Views/Products/Details.cshtml
@@ -8,6 +8,7 @@
 
 <div>
     <h4>Product</h4>
+    <h4 style="text-align:right"><a>Add to Cart</a></h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
