--- a/EntGuild/Views/Shared/_Layout.cshtml
+++ b/EntGuild/Views/Shared/_Layout.cshtml
@@ -58,6 +58,9 @@
                             </div>
                         </li>
                         <!-- Logged in: End -->
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="">View Cart</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex">
