--- a/EntGuild/Views/Products/Index.cshtml
+++ b/EntGuild/Views/Products/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
+<!---->
+
+
 <h1>Index</h1>
 <!-- Admin Only: Start -->
 <p>
@@ -12,8 +15,37 @@
 <!-- Admin Only: End -->
 <form asp-controller="Products" asp-action="Index" method="get">
     <p>
-        <select asp-for="ProductGenre" asp-items="Model.Genres">
+        <select asp-for="ProductGenre" id="choice1" asp-items="Model.Genres">
             <option value="">All</option>
+        </select>
+        <select asp-for="ProductGenre" id="choice2">
+            <option data-option="1" value="M">
+                Manga
+            </option>
+            <option data-option="1" value="M">
+                Light Novel
+            </option>
+            <option data-option="1" value="M">
+                Manhwa
+            </option>
+            <option data-option="2" value="M">
+                RPG
+            </option>
+            <option data-option="2" value="M">
+                JRPG
+            </option>
+            <option data-option="2" value="M">
+                Fish Sim
+            </option>
+            <option data-option="3" value="M">
+                Romance
+            </option>
+            <option data-option="3" value="M">
+                Action
+            </option>
+            <option data-option="3" value="M">
+                Adventure
+            </option>
         </select>
         Title: <input type="text" name="SearchString" />
         <input type="submit" value="Search" />
@@ -89,3 +121,18 @@
 }
     </tbody>
 </table>
+@section scripts    {
+<script type="text/javascript" language="javascript">
+    $("#choice1").change(function () {
+        if (typeof $(this).data('options') === "undefined") {
+            /*Taking an array of all options-2 and kind of embedding it on the select1*/
+            $(this).data('options', $('#choice2 option').clone());
+        }
+        var id = $(this).val();
+        var options = $(this).data('options').filter('[data-option=' + id + ']');
+        $('#choice2').html(options);
+        $('#choice2').selectpicker('refresh');
+    });
+</script>
+}
+
