--- a/EntGuild/Views/Home/Index.cshtml
+++ b/EntGuild/Views/Home/Index.cshtml
@@ -1,51 +1,64 @@
-﻿<!--model EntGuild.Models.Product -->
-@model IEnumerable<EntGuild.Models.Product>
+﻿@model EntGuild.Models.ProductGenreViewModel
+
 <style>
+
     body {
         background-image: url('test_bg.JPG');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
     }
+
+    .card-container {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .card {
+        width: 200px;
+        margin: 20px;
+    }
+
+    .card-title {
+        font-weight: bold;
+    }
+
 </style>
 
 @{
     ViewData["Title"] = "Home Page";
 }
 
-
-
-<div class="text-center">
-    <h1 class="display-4">Entertainment Hub</h1>
-    <p> Welcome to Entertainment Hub where all your favourite movies, games and books are located.</p>
+<div class="card-container">
+    <h2>Books Genre</h2>
+    @foreach (var product in Model.BooksProducts!)
+    {
+        <div class="card">
+            <h3>@product.Name</h3>
+            <p>@product.Author</p>
+        </div>
+    }
 </div>
 
-<h2> Hot Movies </h2>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                <img src="test_bg.JPG" />
-                @Html.DisplayNameFor(model => model.Name)
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
+<div class="card-container">
+    <h2>Movies Genre</h2>
+    @foreach (var product in Model.MoviesProducts!)
+    {
+        <div class="card">
+            <h3>@product.Name</h3>
+            <p>@product.Author</p>
+        </div>
+    }
+</div>
 
-        </tr>
-    </thead>
-</table>
-
-
-<h2> Games </h2>
-<h2> Books </h2>
+<div class="card-container">
+    <h2>Games Genre</h2>
+    @foreach (var product in Model.GamesProducts!)
+    {
+        <div class="card">
+            <h3>@product.Name</h3>
+            <p>@product.Author</p>
+        </div>
+    }
+</div>
