--- a/EntGuild/Views/Shared/_Layout.cshtml
+++ b/EntGuild/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Movies" asp-action="Index">Entertainment Guild</a>
+                <a class="navbar-brand" asp-area="" asp-controller="" asp-action=""><img width="400px" src="~/images/logo_3.png"/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -51,16 +51,15 @@
                                 <!-- Admin: Start -->
                                 <li><a class="dropdown-item" href="#">Admin</a></li>
                                 <!-- Admin: End -->
-                                <li><a class="dropdown-item" href="#">Settings</a></li>
                                 <li><hr class="dropdown-divider" /></li>
                                 <li><a class="dropdown-item" href="#">Log Out</a></li>
                             </ul>
                             </div>
                         </li>
-                        <!-- Logged in: End -->
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="">View Cart</a>
                         </li>
+                        <!-- Logged in: End -->
                     </ul>
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex">
