--- a/EntGuild/Views/Products/Details.cshtml
+++ b/EntGuild/Views/Products/Details.cshtml
@@ -8,7 +8,9 @@
 
 <div>
     <h4>Product</h4>
+    <!-- Customer Only: Start -->
     <h4 style="text-align:right"><a href='javascript:history.go(-1)'>Add to Cart</a></h4>
+    <!-- Customer Only: End -->
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
