--- a/EntGuild/Views/Shared/_Layout.cshtml
+++ b/EntGuild/Views/Shared/_Layout.cshtml
@@ -23,9 +23,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="">Products</a>
                         </li>
                         <!-- Not logged in: Start -->
@@ -85,7 +82,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Entertainment Guild - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Entertainment Hub
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
