--- a/EntGuild/Views/Home/Index.cshtml
+++ b/EntGuild/Views/Home/Index.cshtml
@@ -2,6 +2,13 @@
 
 <style>
 
+    body {
+        background-image: url('test_bg.JPG');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+
     .card-container {
         display: flex;
         justify-content: space-between;
@@ -34,11 +41,6 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
-<h1>Entertainment Hub</h1>
-
-<p>Welcome to Entertainment Hub where all your favourite Books, Movies and Games are located!</p>
-
 <h2>Books Genre</h2>
 <div class="card-container">
     
