--- a/EntGuild/Views/Products/Details.cshtml
+++ b/EntGuild/Views/Products/Details.cshtml
@@ -9,7 +9,7 @@
 <div>
     <h4>Product</h4>
     <!-- Customer Only: Start -->
-    <h4 style="text-align:right"><a asp-controller="Cart" asp-action="Add" asp-route-id="@Model.Slug"href='javascript:history.go(-1)'>Add to Cart</a></h4>
+    <h4 style="text-align:right"><a href='javascript:history.go(-1)'>Add to Cart</a></h4>
     <!-- Customer Only: End -->
     <hr />
     <dl class="row">
