--- a/EntGuild/Views/Shared/_Layout.cshtml
+++ b/EntGuild/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="">View Cart</a>
+                            <a class="nav-link text-dark" asp-area="Index" asp-controller="Cart" asp-action="">View Cart</a>
                         </li>
                         <!-- Logged in: End -->
                     </ul>
