Roles Working and crap

--- a/EntGuild/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EntGuild/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,10 @@
 ﻿@page
 @model RegisterModel
+@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 @{
     ViewData["Title"] = "Register";
 }
