--- a/EntGuild/Views/Shared/_Layout.cshtml
+++ b/EntGuild/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
 ﻿<!DOCTYPE html>
+@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -22,19 +27,22 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="">Products</a>
                         </li>
                         <!-- Not logged in: Start -->
                         <li class="nav-item">
                             <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-                        </li>
+                            </li>
                         <li class="nav-item" style="text-align: right">
                             <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
                         </li>
                         <!-- Not logged in: End -->
                         <!-- Logged in: Start -->
-                        <li class="nav-item" style="text-align: right">
+                        @if ((User.IsInRole("Customers")) || (User.IsInRole("Admin")) || (User.IsInRole("Employees")))
+                        {
+                            <li class="nav-item" style="text-align: right">
                             <div class="btn-group">
                             <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                 Account
@@ -43,10 +51,16 @@
                                 <li><a class="dropdown-item" href="#">Orders</a></li>
                                 <li><a class="dropdown-item" href="#">Settings</a></li>
                                 <!-- Employee: Start -->
+                                @if (User.IsInRole("Employees"))
+                                {
                                 <li><a class="dropdown-item" href="#">Staff</a></li>
+                                }
                                 <!-- Employee: End -->
                                 <!-- Admin: Start -->
-                                <li><a class="dropdown-item" href="#">Admin</a></li>
+                                    @if (User.IsInRole("Admin"))
+                                    {
+                                        <li><a class="dropdown-item" href="#">Admin</a></li>
+                                    }
                                 <!-- Admin: End -->
                                 <li><hr class="dropdown-divider" /></li>
                                 <li><a class="dropdown-item" href="#">Log Out</a></li>
@@ -56,6 +70,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="">View Cart</a>
                         </li>
+                        }
                         <!-- Logged in: End -->
                     </ul>
                 </div>
