--- a/EntGuild/Views/Products/Index.cshtml
+++ b/EntGuild/Views/Products/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@model EntGuild.Models.ProductGenreViewModel
+@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 @{
     ViewData["Title"] = "Index";
@@ -13,8 +17,10 @@
 
 <h1>Index</h1>
 <!-- Admin Only: Start -->
-<p>
-    <a asp-action="Create">Create New</a>
+<p>@if (User.IsInRole("Admin"))
+    {
+        <a asp-action="Create">Create New</a>
+    }
 </p>
 <!-- Admin Only: End -->
 <form asp-controller="Products" asp-action="Index" method="get">
